Fixed errounous column-gap

--- a/css/layout.css
+++ b/css/layout.css
@@ -47,7 +47,7 @@
 
 	.columns {
 		column-count: 2;
-		column-gap: 40px;
+		column-gap: 14px;
 	}
 }
 
